crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_quoted_band_marker_past_tolerance_goes_lazy.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 99
expression: cst_output
---
DOCUMENT@0..29
  BLOCK_QUOTE@0..29
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    LIST@2..29
      LIST_ITEM@2..29
        LIST_MARKER@2..3 "-"
        WHITESPACE@3..4 " "
        PLAIN@4..8
          TEXT@4..5 "a"
          NEWLINE@5..6 "\n"
          LINE_PREFIX@6..7 ">"
          LINE_PREFIX@7..8 " "
        LIST@8..29
          LIST_ITEM@8..29
            WHITESPACE@8..10 "  "
            LIST_MARKER@10..13 "10."
            WHITESPACE@13..15 "  "
            PLAIN@15..29
              TEXT@15..16 "b"
              NEWLINE@16..17 "\n"
              LINE_PREFIX@17..18 ">"
              LINE_PREFIX@18..19 " "
              TEXT@19..28 "      - c"
              NEWLINE@28..29 "\n"
