crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_quoted_item_nested_quote_after_blank.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 99
expression: cst_output
---
DOCUMENT@0..33
  BLOCK_QUOTE@0..33
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    LIST@2..33
      LIST_ITEM@2..29
        LIST_MARKER@2..3 "-"
        WHITESPACE@3..4 " "
        PLAIN@4..6
          TEXT@4..5 "a"
          NEWLINE@5..6 "\n"
        BLOCK_QUOTE_MARKER@6..7 ">"
        BLANK_LINE@7..8
          BLANK_LINE@7..8 "\n"
        BLOCK_QUOTE_MARKER@8..9 ">"
        WHITESPACE@9..10 " "
        BLOCK_QUOTE@10..27
          WHITESPACE@10..12 "  "
          BLOCK_QUOTE_MARKER@12..13 ">"
          WHITESPACE@13..14 " "
          PARAGRAPH@14..27
            TEXT@14..26 "nested quote"
            NEWLINE@26..27 "\n"
        PLAIN@27..29
          LINE_PREFIX@27..28 ">"
          LINE_PREFIX@28..29 " "
      LIST_ITEM@29..33
        LIST_MARKER@29..30 "-"
        WHITESPACE@30..31 " "
        PLAIN@31..33
          TEXT@31..32 "b"
          NEWLINE@32..33 "\n"
