crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_quoted_para_in_list_item_stops_at_html_closer.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..24
  LIST@0..24
    LIST_ITEM@0..24
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..8
        INLINE_HTML@2..7
          INLINE_HTML_CONTENT@2..7 "<div>"
        NEWLINE@7..8 "\n"
      BLANK_LINE@8..9
        BLANK_LINE@8..9 "\n"
      BLOCK_QUOTE@9..15
        WHITESPACE@9..11 "  "
        BLOCK_QUOTE_MARKER@11..12 ">"
        WHITESPACE@12..13 " "
        PARAGRAPH@13..15
          TEXT@13..14 "a"
          NEWLINE@14..15 "\n"
      HTML_BLOCK@15..24
        HTML_BLOCK_TAG@15..24
          TEXT@15..23 "  </div>"
          NEWLINE@23..24 "\n"
