crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_raw_tex_math_environment_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..55
  PARAGRAPH@0..55
    LATEX_COMMAND@0..54
      TEXT@0..54 "\\begin{equation}\n(\\#e ..."
    NEWLINE@54..55 "\n"
