crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_setext_after_setext_multiline_paragraph_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..102
  PARAGRAPH@0..14
    TEXT@0..1 "a"
    NEWLINE@1..2 "\n"
    TEXT@2..3 "b"
    NEWLINE@3..4 "\n"
    TEXT@4..7 "---"
    NEWLINE@7..8 "\n"
    TEXT@8..9 "c"
    NEWLINE@9..10 "\n"
    TEXT@10..13 "---"
    NEWLINE@13..14 "\n"
  BLANK_LINE@14..15
    BLANK_LINE@14..15 "\n"
  BLOCK_QUOTE@15..39
    BLOCK_QUOTE_MARKER@15..16 ">"
    WHITESPACE@16..17 " "
    PARAGRAPH@17..39
      TEXT@17..18 "a"
      NEWLINE@18..19 "\n"
      BLOCK_QUOTE_MARKER@19..20 ">"
      WHITESPACE@20..21 " "
      TEXT@21..22 "b"
      NEWLINE@22..23 "\n"
      BLOCK_QUOTE_MARKER@23..24 ">"
      WHITESPACE@24..25 " "
      TEXT@25..28 "---"
      NEWLINE@28..29 "\n"
      BLOCK_QUOTE_MARKER@29..30 ">"
      WHITESPACE@30..31 " "
      TEXT@31..32 "c"
      NEWLINE@32..33 "\n"
      BLOCK_QUOTE_MARKER@33..34 ">"
      WHITESPACE@34..35 " "
      TEXT@35..38 "---"
      NEWLINE@38..39 "\n"
  BLANK_LINE@39..40
    BLANK_LINE@39..40 "\n"
  LIST@40..85
    LIST_ITEM@40..64
      LIST_MARKER@40..41 "-"
      WHITESPACE@41..42 " "
      PLAIN@42..64
        TEXT@42..43 "a"
        NEWLINE@43..44 "\n"
        TEXT@44..47 "  b"
        NEWLINE@47..48 "\n"
        TEXT@48..53 "  ---"
        NEWLINE@53..54 "\n"
        TEXT@54..57 "  c"
        NEWLINE@57..58 "\n"
        TEXT@58..63 "  ---"
        NEWLINE@63..64 "\n"
    BLANK_LINE@64..65
      BLANK_LINE@64..65 "\n"
    LIST_ITEM@65..85
      LIST_MARKER@65..66 "-"
      WHITESPACE@66..67 " "
      HEADING@67..75
        HEADING_CONTENT@67..68
          TEXT@67..68 "a"
        NEWLINE@68..69 "\n"
        WHITESPACE@69..71 "  "
        SETEXT_HEADING_UNDERLINE@71..74
          SETEXT_HEADING_UNDERLINE@71..74 "---"
        NEWLINE@74..75 "\n"
      HEADING@75..85
        WHITESPACE@75..77 "  "
        HEADING_CONTENT@77..78
          TEXT@77..78 "c"
        NEWLINE@78..79 "\n"
        WHITESPACE@79..81 "  "
        SETEXT_HEADING_UNDERLINE@81..84
          SETEXT_HEADING_UNDERLINE@81..84 "---"
        NEWLINE@84..85 "\n"
  BLANK_LINE@85..86
    BLANK_LINE@85..86 "\n"
  PARAGRAPH@86..102
    TEXT@86..89 "```"
    NEWLINE@89..90 "\n"
    TEXT@90..91 "x"
    NEWLINE@91..92 "\n"
    TEXT@92..95 "---"
    NEWLINE@95..96 "\n"
    TEXT@96..97 "y"
    NEWLINE@97..98 "\n"
    TEXT@98..101 "---"
    NEWLINE@101..102 "\n"
